--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div class="hero"></div>
     <div class="info"></div>
     <div class="quote"></div>
+    <div class="sign"></div>
 </body>
 </html>
