Add a css file for styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="header-links">
+            <a>header link 1</a>
+            <a>header link 2</a>
+            <a>header link 3</a>
+        </div>
+    </div>
     <div class="hero"></div>
     <div class="info"></div>
     <div class="quote"></div>
