Made header and hero section
I realized that the header and hero sections are pretty aligned with each other. They could even be a single container.
So, I implemented these two sections according to the prescribed image.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="header-links">
-            <a>header link 1</a>
-            <a>header link 2</a>
-            <a>header link 3</a>
+    <div class="upper">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="header-links">
+                <a>header link 1</a>
+                <a>header link 2</a>
+                <a>header link 3</a>
+            </div>
+        </div>
+        <div class="hero">
+            <div class="hero-text">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="hero-sec-text">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color is lower contrast.</div>
+                <button class="sign-up">sign up</button>
+            </div>
+            <div class="hero-image">This is a placeholder for the image</div>
         </div>
     </div>
-    <div class="hero"></div>
     <div class="info"></div>
     <div class="quote"></div>
     <div class="sign"></div>
 </body>
+
 </html>
