--- a/index.html
+++ b/index.html
@@ -23,13 +23,39 @@
                 <div class="hero-main-text">This website is awesome</div>
                 <div class="hero-sec-text">This website has some subtext that goes here under the main title. It's a
                     smaller font and the color is lower contrast.</div>
-                <button class="sign-up">sign up</button>
+                <button class="sign-up">Sign up</button>
             </div>
             <div class="hero-image">This is a placeholder for the image</div>
         </div>
     </div>
-    <div class="info"></div>
-    <div class="quote"></div>
+    <div class="info">
+        <div class="head">Some Random Information</div>
+        <div class="infos">
+            <div class="info-box">
+                <div class="image-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-box">
+                <div class="image-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-box">
+                <div class="image-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-box">
+                <div class="image-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quote-at-center">
+            <p class="quote-is">This is an inspiring quote, or a testimonial from a customer. Maybe it's just feeling up
+                space, or maybe people will actually read it. Who knows? All I know is it looks nice.</p>
+            <div class="author">-Thor,God of Thunder</div>
+        </div>
+    </div>
     <div class="sign"></div>
 </body>
 
