--- a/index.html
+++ b/index.html
@@ -59,13 +59,16 @@
     <div class="sign">
         <div class="call-box">
             <div class="call">
-                 <div class="call-main-text">Call to action! It's time!</div>
-                 <div class="call-sec-text">Sign up for our product by clicking the button right over there!</div>
+                <div class="call-main-text">Call to action! It's time!</div>
+                <div class="call-sec-text">Sign up for our product by clicking the button right over there!</div>
             </div>
             <div class="call-sign">
-            <button class="Sign-up">Sign up</button>
+                <button class="Sign-up">Sign up</button>
             </div>
         </div>
+    </div>
+    <div class="copyright">
+        <div class="odin">Copyright © The odin project 2021</div>
     </div>
 </body>
 
